# projet_v2v

./: .gitignore  CMakeLists.txt  MapComponent.qml  resources.qrc
include/: SimulatorView.h  communication_manager.h  graph_builder.h  graph_types.h  interference_graph.h  interference_graph_test.h  interference_test.h  map_view.h  map_view_qml.h  osm_reader.h  simulator.h  spatial_grid.h  vehicule.h
src/: SimulatorView.cpp  communication_manager.cpp  graph_builder.cpp  interference_graph.cpp  interference_graph_test.cpp  main.cpp  map_view.cpp  map_view_qml.cpp  osm_reader.cpp  simulator.cpp  spatial_grid.cpp  test_interference.cpp  vehicule.cpp
